--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -1,6 +1,12 @@
 *{
     padding: 0;
     margin: 0;
-    background-color: black;
+  background-color: #111111;
+  background-image: linear-gradient(
+    32deg,
+    rgba(8, 8, 8, 0.74) 30px,
+  );
+  background-size: 60px 60px;
+  background-position: -5px -5px;
 }
 
