--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -4,7 +4,7 @@
     background: rgb(48, 46, 46);
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   }
-  .culi {
+  .uli {
     list-style: none;
     background-color: transparent;
     width: 170px;
@@ -198,7 +198,7 @@
     display: grid;
     gap: 18px;
     background-color: transparent;
-    height: 233px;
+    height: 10px;
 }
 .contenedorInformacion > h3{
     position: relative;
