se cambio la lupa

--- a/src/Screens/Search/Search.module.css
+++ b/src/Screens/Search/Search.module.css
@@ -73,11 +73,14 @@
   position: relative;
 }
 .imag{
- color: white;
+  background-color: transparent;
+  background-size: 50px 50px;
+  background-image: url(https://cdn.icon-icons.com/icons2/1111/PNG/128/loupe_79257.png);
 }
-.imag:hover {
-  color: black;
+.imag:hover{
+ background-color: white;
 }
+ 
 
 .btn:after,
 .btn:before {
