--- a/src/Screens/Search/Search.module.css
+++ b/src/Screens/Search/Search.module.css
@@ -76,9 +76,8 @@
   background-color: transparent;
   background-size: 50px 50px;
   background-image: url('../../assets/busqueda-de-lupa.png');
-}
-.imag:hover{
- background-color: white;
+  background-repeat: no-repeat;
+  
 }
  
 
