--- a/src/Screens/Search/Search.module.css
+++ b/src/Screens/Search/Search.module.css
@@ -73,11 +73,18 @@
   position: relative;
 }
 .imag{
-  background-color: transparent;
-  background-size: 50px 50px;
-  background-image: url('../../assets/busqueda-de-lupa.png');
-  background-repeat: no-repeat;
-  
+
+    background-color: transparent;
+    background-image: url('../../assets/busqueda-de-lupa.png');
+    background-position: center;
+    background-size: 30px 30px;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
  
 
